Added some fragments.

--- a/lecture3/index.html
+++ b/lecture3/index.html
@@ -88,8 +88,8 @@ reveal:
         <h3>Problems with SP scoring of MSAs</h3>
 
         <ul class="spaced" style="margin-top:10%;width:60%">
-            <li>Substitution scores derived as log-odds scores for <b>pairwise</b> comparisons.</li>
-            <li>The "right thing" would be to construct log-odds scores for triples, quadruples, etc. (depending on the number of rows in the alignment). E.g.
+            <li class="fragment">Substitution scores derived as log-odds scores for <b>pairwise</b> comparisons.</li>
+            <li class="fragment">The "right thing" would be to construct log-odds scores for triples, quadruples, etc. (depending on the number of rows in the alignment). E.g.
                 \begin{align*}
                 s(a,b,c) &amp; = \log\frac{p_{abc}}{f_af_bf_c}\\
                 &amp; \neq \log\frac{p_{ab}}{f_af_b}
@@ -98,7 +98,7 @@ reveal:
                 \end{align*}
             </li>
 
-            <li>No probabilistic justification!</li>
+            <li class="fragment">No probabilistic justification!</li>
         </ul>
     </section>
 
@@ -114,13 +114,13 @@ reveal:
         
         <p style="margin-top:10%">Thought to be the most biologically appropriate, but</p>
         <ul class="spaced" style="width:60%">
-            <li>We don't know the tree.</li>
-            <li>We need to infer the characters on internal nodes to identify
+            <li class="fragment">We don't know the tree.</li>
+            <li class="fragment">We need to infer the characters on internal nodes to identify
             most parsimonious history.</li>
-            <li>There may be different trees for different parts of the alignment (recombination!)</li>
+            <li class="fragment">There may be different trees for different parts of the alignment (recombination!)</li>
         </ul>
 
-        <blockquote>
+        <blockquote class="fragment">
             Sum of pairs is almost always used in practice.
         </blockquote>
 
@@ -138,9 +138,9 @@ reveal:
         <p>Define $F(i_1,i_2,\ldots,i_N)$ to be the score of the best alignment up to
         the subsequences ending in $x^{(1)}_{i_1}, x^{(2)}_{i_2}, \ldots, x^{(N)}_{i_N}$.</p>
 
-        <p>We can then find the following recurrence relation:</p>
+        <p class="fragment">We can then find the following recurrence relation:</p>
 
-        <div style="font-size:0.8em">
+        <div class="fragment" style="font-size:0.8em">
         \begin{align*}
         F(i_1,i_2,\ldots,i_N)=\max\left\{\begin{array}{lcl}
         F(i_1-1,i_2-1,\ldots,i_N-1) &amp; + &amp; S(x^{(1)}_{i_1},x^{(2)}_{i_2},\ldots,x^{(N)}_{i_N})\\
@@ -172,14 +172,14 @@ reveal:
         <ul class="spaced" style="width:60%;margin-top:2em;">
             <li>$F$ consists of $\prod_{q=1}^{N}n_q$ terms:
                 <ul><li>$\sim O(n^N)$ space complexity.</li></ul></li>
-            <li>Computing each element of $F$ requires maximizing over $2^N-1$ possibilities:
+            <li class="fragment">Computing each element of $F$ requires maximizing over $2^N-1$ possibilities:
                 <ul><li>$\sim O(2^Nn^N)$ time complexity.</li>
                     <li>(traceback negligible cost in comparison)</li>
                 </ul>
             </li>
         </ul>
 
-        <blockquote style="margin-top:2em">
+        <blockquote class="fragment" style="margin-top:2em">
             Even aside from the time cost, the space requirement for this
             algorithm is prohibitive.  Storing $F$ for an alignment of 5$\times$100
             character sequences requires $101^5\simeq 10^{10}$ numbers.  Assuming 32 bit
@@ -191,34 +191,34 @@ reveal:
         <h3>Improved DP algorithm</h3>
 
         <ul>
-            <li><a href="">Carrillo &amp; Lipman (1988)</a> presented an
+            <li class="fragment"><a href="">Carrillo &amp; Lipman (1988)</a> presented an
                 algorithm implemented by the program MSA <a href="">(Lipman,
                     Altschul &amp; Kececioglu, 1989)</a> with improved scaling
                 properties.</li>
-            <li>Implements constraints on pairwise alignment scores that can be
+            <li class="fragment">Implements constraints on pairwise alignment scores that can be
                 part of the optimal multiple sequence alignment.</li>
         </ul>
 
-        <img data-src="MDP_MSA.svg" style="width:70%">
+        <img class="fragment" data-src="MDP_MSA.svg" style="width:70%">
 
-        <p>A big improvement, but still impractical for most alignment problems.</p>
+        <p class="fragment">A big improvement, but still impractical for most alignment problems.</p>
     </section>
 
     <section>
         <h3>Multiple Alignment Software</h3>
 
-        <blockquote style="margin-top:2em">Really need approximation methods.</blockquote>
+        <blockquote class="fragment" style="margin-top:2em">Really need approximation methods.</blockquote>
 
-        <p style="margin-top:1em">Different techniques:</p>
+        <p class="fragment" style="margin-top:1em">Different techniques:</p>
         <ol class="spaced" style="width:80%">
-            <li>Progressive global alignment of sequence starting with an
+            <li class="fragment">Progressive global alignment of sequence starting with an
                 alignment of the most similar sequences and then building a
                 full alignment by adding more sequences.</li>
-            <li>Iterative methods that make an initial alignment of groups of
+            <li class="fragment">Iterative methods that make an initial alignment of groups of
                 sequences and then iteratively refine the alignment to achieve
                 a better result. (Barton-Sternberg, Simulated annealing,
                 stochastic hill climbing, genetic algorithms.)</li>
-            <li>Use of probabilistic models of the indel and substitution
+            <li class="fragment">Use of probabilistic models of the indel and substitution
                 process to do statistical inference of alignment. ("Statistical
                 alignment.")</li>
         </ol>
@@ -236,11 +236,11 @@ reveal:
 
         <img data-src="progressive.svg" style="width:80&">
 
-        <p>Decisions:</p>
+        <p class="fragment">Decisions:</p>
         <ol>
-            <li>Order of alignments.</li>
-            <li>Alignment of sequence to group only, or allow group to group.</li>
-            <li>Method of alignment, scoring function.</li>
+            <li class="fragment">Order of alignments.</li>
+            <li class="fragment">Alignment of sequence to group only, or allow group to group.</li>
+            <li class="fragment">Method of alignment, scoring function.</li>
         </ol>
     </section>
 
@@ -250,9 +250,9 @@ reveal:
         <img data-src="guide_tree.svg" style="width:80%">
 
         <ul class="spaced" style="margin-top:1em">
-            <li>Progressive alignment algorithms employ "guide trees" to guide the order
+            <li class="fragment">Progressive alignment algorithms employ "guide trees" to guide the order
                 in which sequences are progressively aligned.</li>
-            <li>In practice these are very rough phylogenetic trees (cheap to
+            <li class="fragment">In practice these are very rough phylogenetic trees (cheap to
                 compute), unsuitable for serious phylogenetic inference but
                 used instead simply to bootstrap the alignment process.</li>
         </ul>
@@ -262,12 +262,12 @@ reveal:
         <h3>The UPGMA tree-building algorithm</h3>
 
         <ul>
-            <li>Clustering algorithm based on pairwise distances.</li>
-            <li>Requires some distance  $d(k,l)$ for every pair of items.</li>
+            <li class="fragment">Clustering algorithm based on pairwise distances.</li>
+            <li class="fragment">Requires some distance  $d(k,l)$ for every pair of items.</li>
         </ul>
 
         <div style="position:relative;width:100%;height:400px">
-            <div style="position:absolute;left:0;top:0;width:100%;height:400px;background-color:white">
+            <div class="fragment" style="position:absolute;left:0;top:0;width:100%;height:400px;background-color:white">
                 <img data-src="UPGMA6.svg" style="position:absolute;left:0;top:0;width:50%">
                 <div style="position:absolute;right:0;top:2em;width:50%">
                     <p>Distance matrix:</p>
@@ -423,8 +423,8 @@ reveal:
 
         <ul class="spaced" style="margin-top:10%">
             <li>After alignment is completed, gap symbols replaced by neutral "X" character.</li>
-            <li>Feng and Doolittle call this the rule of "once a gap, always a gap".</li>
-            <li>Encourages gaps to occur in same columns in subsequent alignments.</li>
+            <li class="fragment">Feng and Doolittle call this the rule of "once a gap, always a gap".</li>
+            <li class="fragment">Encourages gaps to occur in same columns in subsequent alignments.</li>
         </ul>
     </section>
 
@@ -443,26 +443,26 @@ reveal:
 
         <ul class="spaced" style="margin-top:2em;">
             <li><a href="https://doi.org/10.1093/nar/22.22.4673">Thompson, Higgins, Gibson (1994)</a> (55k citations!)</li>
-        <li>Widely used implementation of profile-based progressive multiple alignment</li>
-        <li>Essentially Feng-Doolittle, but uses profile alignment.</li>
+        <li class="fragment">Widely used implementation of profile-based progressive multiple alignment</li>
+        <li class="fragment">Essentially Feng-Doolittle, but uses profile alignment.</li>
         </ul>
 
         <br>
 
-        <p>Overview:</p>
+        <p class="fragment">Overview:</p>
         <ol>
-            <li>Calculate matrix of $\binom{N}{2}$ distances between all pairs
+            <li class="fragment">Calculate matrix of $\binom{N}{2}$ distances between all pairs
                 of $N$ sequences.</li>
-            <li>Construct a guide tree using a clustering algorithm such as
+            <li class="fragment">Construct a guide tree using a clustering algorithm such as
                 UPGMA or neighbour-joining.</li>
-            <li>Progressively align at internal nodes in order of decreasing
+            <li class="fragment">Progressively align at internal nodes in order of decreasing
             similarity using sequence-sequence, sequence-profile and
             profile-profile alignment.</li>
         </ol>
 
         <br>
 
-        <p>Employs many other heuristics.</p>
+        <p class="fragment">Employs many other heuristics.</p>
     </section>
 
 </section>
@@ -472,13 +472,13 @@ reveal:
 
     <p>I.e. "hill climbing".  Slightly change solution to improve score.  Converge to local optimum.</p>
 
-    <p>E.g. <a href="http://dx.doi.org/10.1016/0022-2836(87)90316-0">Barton-Sternberg (1987)</a> multiple alignment:</p>
+    <p class="fragment">E.g. <a href="http://dx.doi.org/10.1016/0022-2836(87)90316-0">Barton-Sternberg (1987)</a> multiple alignment:</p>
     <ol>
-        <li>Find the two sequences with the highest pairwise similarity and align them using standard dynamic programming alignment.</li>
-        <li>Find sequence most similar to a profile of the alignment of the first two and align using profile-sequence alignment.</li>
-        <li>Repeat 2 until all sequences have been included.</li>
-        <li>Remove sequence $X^{(1)}$ and realign it to a profile of the remaining aligned sequences $X^{(2)},\ldots,X^{(N)}$ by profile-sequence alignment. Repeat for sequences $X^{(2)},\ldots,X^{(N)}$.</li>
-        <li>Repeat previous step a fixed number of times, or until the alignment score converges to some value.</li>
+        <li class="fragment">Find the two sequences with the highest pairwise similarity and align them using standard dynamic programming alignment.</li>
+        <li class="fragment">Find sequence most similar to a profile of the alignment of the first two and align using profile-sequence alignment.</li>
+        <li class="fragment">Repeat 2 until all sequences have been included.</li>
+        <li class="fragment">Remove sequence $X^{(1)}$ and realign it to a profile of the remaining aligned sequences $X^{(2)},\ldots,X^{(N)}$ by profile-sequence alignment. Repeat for sequences $X^{(2)},\ldots,X^{(N)}$.</li>
+        <li class="fragment">Repeat previous step a fixed number of times, or until the alignment score converges to some value.</li>
     </ol>
 </section>
 
@@ -486,24 +486,24 @@ reveal:
     <h2>Alignment: General considerations</h2>
 
     <ul class="spaced" style="margin-top:2em;width:80%">
-        <li>These algorithms simply try to maximize the number of matches
+        <li class="fragment">These algorithms simply try to maximize the number of matches
             <ul>
-                <li>Even the "best" alignment may not be the <b>correct</b> biological one.</li>
+                <li class="fragment">Even the "best" alignment may not be the <b>correct</b> biological one.</li>
             </ul>
         </li>
 
-        <li>Multiple alignments are done progressively
+        <li class="fragment">Multiple alignments are done progressively
             <ul>
-                <li>Such alignments get progressively worse as you add sequences.</li>
-                <li>Mistakes that occur during the alignment process are frozen in.</li>
+                <li class="fragment">Such alignments get progressively worse as you add sequences.</li>
+                <li class="fragment">Mistakes that occur during the alignment process are frozen in.</li>
             </ul>
         </li>
 
-        <li>Unless the sequences are very similar you will almost certainly
+        <li class="fragment">Unless the sequences are very similar you will almost certainly
         have to correct manually.</li>
     </ul>
 
-    <blockquote>
+    <blockquote class="fragment">
         Is there a better alternative?
     </blockquote>
 </section>
@@ -512,20 +512,20 @@ reveal:
     <h2>Statistics: fitting vs modeling</h2>
 
     <ul class="spaced" style="margin-top:2em; width:80%">
-        <li>Statistical fitting of sequence variation:
+        <li class="fragment">Statistical fitting of sequence variation:
         <ul>
-            <li>Count frequencies of changes in real data sets</li>
-            <li>Build empirical statistical descriptions of the data (BLOSUM62)</li>
-            <li>Compare observed frequencies to well-defined null hypothesis for testing (log-odds ratio and scores)</li>
-            <li>Use scores in <i>ad hoc</i> algorithms for search and alignment (BLAST and ClustalX)</li>
+            <li class="fragment">Count frequencies of changes in real data sets</li>
+            <li class="fragment">Build empirical statistical descriptions of the data (BLOSUM62)</li>
+            <li class="fragment">Compare observed frequencies to well-defined null hypothesis for testing (log-odds ratio and scores)</li>
+            <li class="fragment">Use scores in <i>ad hoc</i> algorithms for search and alignment (BLAST and ClustalX)</li>
         </ul>
         </li>
 
-        <li>Probabilistic models of sequence evolution:
+        <li class="fragment">Probabilistic models of sequence evolution:
             <ul>
-                <li>Describe a probabilistic model in terms of a process of evolution, rates of substitution, insertion and deletion.</li>
-                <li>Estimate parameters of the model and compare models using Bayes factors.</li>
-                <li>Use Bayesian inference to co-estimate alignment and evolutionary history, together with estimate uncertainties.</li>
+                <li class="fragment">Describe a probabilistic model in terms of a process of evolution, rates of substitution, insertion and deletion.</li>
+                <li class="fragment">Estimate parameters of the model and compare models using Bayes factors.</li>
+                <li class="fragment">Use Bayesian inference to co-estimate alignment and evolutionary history, together with estimate uncertainties.</li>
             </ul>
         </li>
     </ul>
@@ -543,20 +543,20 @@ reveal:
     <h2>Summary</h2>
 
     <ol style="width:80%">
-        <li>Multiple sequence alignments usually scored using the sum of
+        <li class="fragment">Multiple sequence alignments usually scored using the sum of
             pairwise alignment scores. (Sum of pairs, SP.)</li>
-        <li>Score can be maximized using dynamic programming, but scales as
+        <li class="fragment">Score can be maximized using dynamic programming, but scales as
             $\sim O(n^N)$ where $n$ is the average sequence length
             and $N$ is the number of sequences in the alignment.</li>
-        <li>Lipman et al. improved this scaling, but still impractical for all
+        <li class="fragment">Lipman et al. improved this scaling, but still impractical for all
             but very small alignments.</li>
-        <li>Progressive alignment (e.g. Feng-Doolittle) is a very approximate
+        <li class="fragment">Progressive alignment (e.g. Feng-Doolittle) is a very approximate
             method based on building up alignment from successive pairwise
             alignments.</li>
-        <li>Practical computationally but has many flaws, some of which are
+        <li class="fragment">Practical computationally but has many flaws, some of which are
             addressed via iterative refinement.</li>
 
-        <li>Philosophically optimal approach is a Bayesian model-based joint
+        <li class="fragment">Philosophically optimal approach is a Bayesian model-based joint
             inference of the MSA and phylogeny.</li>
     </ol>
 </section>
@@ -564,7 +564,7 @@ reveal:
 <section>
     <h2>Recommended reading</h2>
 
-    <ul>
+    <ul class="spaced" style="margin-top:20%">
         <li>Chapter 6 of "Biological Sequence Analysis", Durbin et al., CUP, 1998.</li>
     </ul>
 </section>
