Added quote to L4.

--- a/lecture4/index.html
+++ b/lecture4/index.html
@@ -1,3 +1,87 @@
 ---
 lecture_num: 4
+
+reveal:
+    history: true
 ---
+
+<section>
+    <h2>House-keeping</h2>
+
+    <ol class="spaced" style="margin-top:10%">
+        <li>No lab this Friday! (Despite what timetable says.)</li>
+        <li>Assignment 1 is <b>now available on Canvas</b>.</li>
+        <li>My office is room 467 (fourth floor) of building 303S (in the CS department)</li>
+        <li>Office hours:
+            <ul>
+                <li>1-3pm, Wednesday</li>
+                <li>Almost any other time, but ...</li>
+                <li>Email <a href="mailto:tgvaughan@gmail.com">tgvaughan@gmail.com</a> to avoid dissapointment.</li>
+            </ul>
+        </li>
+    </ol>
+</section>
+
+<section>
+    <h2>Markov Chains</h2>
+</section>
+
+<section>
+    <h2>Hidden Markov Models (HMMs)</h2>
+</section>
+
+<section>
+    <h2>Most probable path: Viterbi Algorithm</h2>
+</section>
+
+<section>
+    <h2>Forward Algorithm</h2>
+</section>
+
+<section>
+    <h2>Backward Algorithm</h2>
+</section>
+
+<section>
+    <h2>Baum-Welch Algorithm</h2>
+</section>
+
+<section>
+    <h2>Pairwise alignment with HMMs</h2>
+</section>
+
+<section>
+    <h2>Profile alignment</h2>
+</section>
+
+<section>
+    <h2>Why "Dynamic Programming"?</h2>
+
+    <blockquote style="width:90%%; margin-top: 2em; font-size:0.7em">
+        The 1950s were not good years for mathematical research. We
+        had a very interesting gentleman in Washington named Wilson. He was
+        Secretary of Defense, and he actually had a pathological fear and
+        hatred of the word research. I’m not using the term lightly; I’m using
+        it precisely. His face would suffuse, he would turn red, and he would
+        get violent if people used the term research in his presence. You can
+        imagine how he felt, then, about the term mathematical. The RAND
+        Corporation was employed by the Air Force, and the Air Force had Wilson
+        as its boss, essentially. Hence, I felt I had to do something to shield
+        Wilson and the Air Force from the fact that I was really doing
+        mathematics inside the RAND Corporation. What title, what name, could I
+        choose? In the first place I was interested in planning, in decision
+        making, in thinking. But planning, is not a good word for various
+        reasons. I decided therefore to use the word “programming”. I wanted to
+        get across the idea that this was dynamic, this was multistage, this
+        was time-varying. I thought, let's kill two birds with one stone. Let's
+        take a word that has an absolutely precise meaning, namely dynamic, in
+        the classical physical sense. It also has a very interesting property
+        as an adjective, and that it's impossible to use the word dynamic in a
+        pejorative sense. Try thinking of some combination that will possibly
+        give it a pejorative meaning. It's impossible. Thus, I thought dynamic
+        programming was a good name. It was something not even a Congressman
+        could object to.
+
+        <div class="cite">Richard Bellman, "Eye of the Hurricane: An Autobiography", 1984</div>
+    </blockquote>
+</section>
