Getting stuck into L4 properly now.

--- a/lecture4/index.html
+++ b/lecture4/index.html
@@ -23,12 +23,19 @@ reveal:
 </section>
 
 <section>
-    <h2>Markov Chains</h2>
+    <section class="center">
+        <h2>Hidden Markov Models (HMMs)</h2>
+    </section>
+
+    <section>
+        <h3>Markov Chains</h2>
+    </section>
+
+    <section>
+        <h3>Markov Chains with hidden state</h3>
+    </section>
 </section>
 
-<section>
-    <h2>Hidden Markov Models (HMMs)</h2>
-</section>
 
 <section>
     <h2>Most probable path: Viterbi Algorithm</h2>
@@ -57,7 +64,7 @@ reveal:
 <section>
     <h2>Why "Dynamic Programming"?</h2>
 
-    <blockquote style="width:90%%; margin-top: 2em; font-size:0.7em">
+    <blockquote style="width:90%; margin-top: 2em; font-size:0.7em">
         The 1950s were not good years for mathematical research. We
         had a very interesting gentleman in Washington named Wilson. He was
         Secretary of Defense, and he actually had a pathological fear and
